# ifc-sdk

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.txt  Copyright.txt  PCHSupport.cmake  Readme.md  Readme.txt  StepConfig.cmake.in  cotire.cmake  ifc2x3Config.cmake.in
doc/: CMakeLists.txt  doxy.config.in  ifc_bridge2x3.exp
doc/R2x3_TC1/: 2x_style.css  alphabeticalorder_definedtype.htm  alphabeticalorder_entities.htm  alphabeticalorder_enumtype.htm  alphabeticalorder_index.htm  alphabeticalorder_selecttype.htm  blank.htm  change_log.htm  copyright.htm  default.htm  default_content.htm  default_objects.htm  default_source.htm  deprecated_constructs.htm  dtree.css  index.htm  inheritance_index.htm  order_by_architecture.htm  pset_schema.htm  schemas.htm  secondlevel.css  toplevel.css  whats_new.htm
doc/R2x3_TC1/change/: IFC2x-Add1_change-log.htm  IFC2x2-Add1_change-log.htm  IFC2x3-TC1_change-log.htm  IFC2x3_change-log.htm
doc/R2x3_TC1/ifcactorresource/: content.htm  entities.htm  enumerations.htm  ifcactorresource.htm  select_types.htm
doc/R2x3_TC1/ifcapprovalresource/: content.htm  entities.htm  ifcapprovalresource.htm
doc/R2x3_TC1/ifcarchitecturedomain/: content.htm  entities.htm  enumerations.htm  ifcarchitecturedomain.htm
doc/R2x3_TC1/ifcbuildingcontrolsdomain/: content.htm  entities.htm  enumerations.htm  ifcbuildingcontrolsdomain.htm
doc/R2x3_TC1/ifcconstraintresource/: content.htm  entities.htm  enumerations.htm  ifcconstraintresource.htm  select_types.htm
doc/R2x3_TC1/ifcconstructionmgmtdomain/: content.htm  entities.htm  enumerations.htm  ifcconstructionmgmtdomain.htm
doc/R2x3_TC1/ifccontrolextension/: content.htm  entities.htm  enumerations.htm  ifccontrolextension.htm
doc/R2x3_TC1/ifccostresource/: content.htm  diagram_overview.htm  entities.htm  enumerations.htm  ifccostresource.htm  select_types.htm
doc/R2x3_TC1/ifcdatetimeresource/: content.htm  defined_types.htm  entities.htm  enumerations.htm  functions.htm  ifcdatetimeresource.htm  select_types.htm
doc/R2x3_TC1/ifcelectricaldomain/: content.htm  entities.htm  enumerations.htm  ifcelectricaldomain.htm
doc/R2x3_TC1/ifcexternalreferenceresource/: content.htm  entities.htm  enumerations.htm  ifcexternalreferenceresource.htm  select_types.htm
doc/R2x3_TC1/ifcfacilitiesmgmtdomain/: content.htm  entities.htm  ifcfacilitiesmgmtdomain.htm  select_types.htm
doc/R2x3_TC1/ifcgeometricconstraintresource/: content.htm  diagram_overview.htm  entities.htm  functions.htm  ifcgeometricconstraintresource.htm  select_types.htm
doc/R2x3_TC1/ifcgeometricmodelresource/: content.htm  diagram_overview.htm  entities.htm  enumerations.htm  ifcgeometricmodelresource.htm  select_types.htm
doc/R2x3_TC1/ifcgeometryresource/: content.htm  defined_types.htm  diagram_overview.htm  entities.htm  enumerations.htm  functions.htm  ifcgeometryresource.htm  select_types.htm
doc/R2x3_TC1/ifchvacdomain/: content.htm  entities.htm  enumerations.htm  ifchvacdomain.htm
doc/R2x3_TC1/ifckernel/: content.htm  diagram_overview.htm  entities.htm  enumerations.htm  functions.htm  global_rules.htm  ifckernel.htm
doc/R2x3_TC1/ifcmaterialpropertyresource/: content.htm  diagram_overview.htm  entities.htm  ifcmaterialpropertyresource.htm
doc/R2x3_TC1/ifcmaterialresource/: content.htm  entities.htm  enumerations.htm  (+3 more)
doc/html/: annotated.html  classes.html  files.html  functions.html  functions_0x5f.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6a.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x7a.html  functions_0x7e.html  functions_enum.html  functions_eval.html  functions_eval_0x63.html  functions_eval_0x67.html  functions_eval_0x68.html  functions_eval_0x69.html  functions_eval_0x6e.html  functions_eval_0x73.html  functions_eval_0x74.html  functions_eval_0x75.html  functions_eval_0x77.html  (+122 more)
examples/buildModel/: CMakeLists.txt  CreateGeometricRepresentationVisitor.cpp  CreateGeometricRepresentationVisitor.h  UUIDGenerator.cpp  UUIDGenerator.h  main.cpp
examples/readWrite/: CMakeLists.txt  main.cpp
src/Step/: BaseCopyOp.cpp  BaseEntity.cpp  BaseExpressDataSet.cpp  BaseObject.cpp  BaseObjectPrivate.cpp  BaseObjectPrivate.h  BaseSPFObject.cpp  BaseSPFReader.cpp  BaseSPFReader.cpp.new  BaseSPFWriter.cpp  BaseVisitor.cpp  CMakeLists.txt  ClassType.cpp  ClientData.cpp  ClientDataHandler.cpp  Config.h.in  Referenced.cpp  SPFData.cpp  SPFFunctions.cpp  SPFFunctions.cpp.new  SPFHeader.cpp  SPFHeader.cpp.new  StepConfig.cmake.in  StepLogger.cpp  String.cpp  logger.cpp
src/ifc2x3/: CMakeLists.txt  CopyOp.cpp  Derived.cpp  ExpressDataSet.cpp  ExpressDataSet_1.cpp  ExpressDataSet_2.cpp  ExpressDataSet_3.cpp  FalseVisitor.cpp  Ifc2DCompositeCurve.cpp  IfcActionRequest.cpp  IfcActor.cpp  IfcActorRole.cpp  IfcActorSelect.cpp  IfcActuatorType.cpp  IfcAddress.cpp  IfcAirTerminalBoxType.cpp  IfcAirTerminalType.cpp  IfcAirToAirHeatRecoveryType.cpp  IfcAlarmType.cpp  IfcAlignmentElement.cpp  IfcAngularDimension.cpp  IfcAnnotation.cpp  IfcAnnotationCurveOccurrence.cpp  IfcAnnotationFillArea.cpp  IfcAnnotationFillAreaOccurrence.cpp  IfcAnnotationOccurrence.cpp  IfcAnnotationSurface.cpp  IfcAnnotationSurfaceOccurrence.cpp  IfcAnnotationSymbolOccurrence.cpp  IfcAnnotationTextOccurrence.cpp  IfcApplication.cpp  IfcAppliedValue.cpp  IfcAppliedValueRelationship.cpp  IfcAppliedValueSelect.cpp  IfcApproval.cpp  IfcApprovalActorRelationship.cpp  IfcApprovalPropertyRelationship.cpp  IfcApprovalRelationship.cpp  IfcArbitraryClosedProfileDef.cpp  IfcArbitraryOpenProfileDef.cpp  (+700 more)
tests/Derived/: CMakeLists.txt
tests/Geometry/: CMakeLists.txt
tutorials/: 01_ReadFile.cpp  02_CountObjectsPSet.cpp  03_PrintProject.cpp  04_CollectConnectedSpaces.cpp  CMakeLists.txt
(+4738 files in other folders)
