SET(PROJECT_EXAMPLE_NAME buildModel)

PROJECT(${PROJECT_EXAMPLE_NAME}_app)

FILE(GLOB PROJECT_SOURCES "*.cpp")

FILE(GLOB PROJECT_INCLUDES "*.h")

ADD_EXECUTABLE(${PROJECT_EXAMPLE_NAME}_app ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

TARGET_LINK_LIBRARIES(${PROJECT_EXAMPLE_NAME}_app ifc2x3 ${Boost_LIBRARIES})
if(UNIX)
 if(NOT APPLE)
    TARGET_LINK_LIBRARIES(${PROJECT_EXAMPLE_NAME}_app uuid)
 endif (NOT APPLE)
endif(UNIX)
SET_TARGET_PROPERTIES(${PROJECT_EXAMPLE_NAME}_app PROPERTIES PROJECT_LABEL "Example Ifc2x3 SDK - ${PROJECT_EXAMPLE_NAME}")

