PROJECT(Step)

# The CMake version number.
SET(Step_VERSION_MAJOR 1)
SET(Step_VERSION_MINOR 1)
SET(Step_VERSION_PATCH 30)
SET(Step_VERSION "${Step_VERSION_MAJOR}.${Step_VERSION_MINOR}")
SET(Step_VERSION_FULL "${Step_VERSION}.${Step_VERSION_PATCH}")

FILE(GLOB PROJECT_SOURCES *.cpp)

FILE(GLOB PROJECT_INCLUDES ../../include/Step/*.h)

ADD_LIBRARY(Step SHARED ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

SET_TARGET_PROPERTIES(Step PROPERTIES PROJECT_LABEL "Library Step" VERSION ${Step_VERSION_FULL} SOVERSION ${Step_VERSION})

INSTALL(FILES ${PROJECT_INCLUDES} DESTINATION include/Step)

INSTALL(TARGETS Step
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib${LIB_POSTFIX}
            ARCHIVE DESTINATION lib${LIB_POSTFIX}
)

if(WIN32)
	get_property(TARGET_NAME_DEBUG TARGET Step PROPERTY LOCATION_DEBUG)
	string(REGEX REPLACE "dll$" "pdb" TARGET_PDB_FILE ${TARGET_NAME_DEBUG})
	install(FILES ${TARGET_PDB_FILE} DESTINATION bin CONFIGURATIONS Debug )    
endif()