PROJECT(Step)

# The CMake version number.
SET(Step_VERSION_MAJOR 1 CACHE STRING "Version" FORCE)
SET(Step_VERSION_MINOR 6 CACHE STRING "Version" FORCE)
SET(Step_VERSION_PATCH 1 CACHE STRING "Version" FORCE)
SET(Step_VERSION "${Step_VERSION_MAJOR}.${Step_VERSION_MINOR}" CACHE STRING "Version" FORCE)
SET(Step_VERSION_FULL "${Step_VERSION}.${Step_VERSION_PATCH}" CACHE STRING "Version" FORCE)
SET(Step_SOVERSION 4 CACHE STRING "Version" FORCE)

FILE(GLOB PROJECT_SOURCES *.cpp)

FILE(GLOB PROJECT_INCLUDES ../../include/Step/*.h)
LIST(APPEND PROJECT_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/Step/Export.h)
LIST(APPEND PROJECT_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/Step/Config.h)

include(GenerateExportHeader)
ADD_COMPILER_EXPORT_FLAGS()

include_directories(${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(Step ${SHARED_OR_STATIC} ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

OPTION(STEP_CHECK_RANGE "Make Collection check ranges" ON)

SET(DEBUG_LOG_LEVEL INFO)
SET(RELEASE_LOG_LEVEL WARNING)

GENERATE_EXPORT_HEADER( Step EXPORT_FILE_NAME Step/Export.h STATIC_DEFINE IFC2X3_STATIC)
CONFIGURE_FILE(Config.h.in ${CMAKE_CURRENT_BINARY_DIR}/Step/Config.h)

SET_TARGET_PROPERTIES(Step PROPERTIES PROJECT_LABEL "Library Step" VERSION ${Step_VERSION_FULL} SOVERSION ${Step_SOVERSION})

INSTALL(FILES ${PROJECT_INCLUDES} DESTINATION include/Step)

INSTALL(TARGETS Step
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib${LIB_POSTFIX}
    ARCHIVE DESTINATION lib${LIB_POSTFIX}
)

if(WIN32)
    install_pdb(Step Debug)
    install_pdb(Step RelWithDebInfo)
endif()
