PROJECT(ifc2x3)

FILE (GLOB PROJECT_SOURCES *.cpp)

FILE (GLOB PROJECT_INCLUDES ../../include/ifc2x3/*.h )
LIST (APPEND PROJECT_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/ifc2x3/Export.h)

include(GenerateExportHeader)

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${Step_BINARY_DIR})

ADD_COMPILER_EXPORT_FLAGS()
if(ENABLE_PRECOMPILED_HEADER AND WIN32)
    GET_NATIVE_PRECOMPILED_HEADER(ifc2x3 "precompiled.h")
    list(APPEND PROJECT_SOURCES ${ifc2x3_pch})
endif()

ADD_LIBRARY(ifc2x3 ${SHARED_OR_STATIC} ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

GENERATE_EXPORT_HEADER( ifc2x3 EXPORT_FILE_NAME ifc2x3/Export.h STATIC_DEFINE IFC2X3_STATIC)

if(ENABLE_PRECOMPILED_HEADER) 
    add_definitions(-DENABLE_PRECOMPILED_HEADER)
    add_definitions(-Difc2x3_EXPORTS)
    ADD_COMPILER_EXPORT_FLAGS()
    if(WIN32)
        ADD_NATIVE_PRECOMPILED_HEADER(ifc2x3 "precompiled.h")
    else()
        ADD_PRECOMPILED_HEADER(ifc2x3 "precompiled.h")
    endif()
else()
    ADD_COMPILER_EXPORT_FLAGS()
endif()

TARGET_LINK_LIBRARIES(ifc2x3 Step )

IF(MSVC)
  SET_TARGET_PROPERTIES(ifc2x3 PROPERTIES LINK_FLAGS "/INCREMENTAL:NO")
ENDIF(MSVC)

SET_TARGET_PROPERTIES(ifc2x3 PROPERTIES PROJECT_LABEL "Library ifc2x3" VERSION ${ifc2x3_sdk_VERSION_FULL} SOVERSION ${ifc2x3_sdk_SOVERSION})

INSTALL(FILES ${PROJECT_INCLUDES} DESTINATION include/ifc2x3)

INSTALL(TARGETS ifc2x3
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib${LIB_POSTFIX}
        ARCHIVE DESTINATION lib${LIB_POSTFIX}
)

if(WIN32)
	get_property(TARGET_NAME_DEBUG TARGET ifc2x3 PROPERTY LOCATION_DEBUG)
	string(REGEX REPLACE "dll$" "pdb" TARGET_PDB_FILE ${TARGET_NAME_DEBUG})
	install(FILES ${TARGET_PDB_FILE} DESTINATION bin CONFIGURATIONS Debug )    
endif()
